Removed filetype preferences in favor of EnvironmentAwareReporters